[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "jgo"
version = "1.0.6"
description = "Launch Java code from Python and the CLI, installation-free."
license = {text = "Unlicense"}
authors = [{name = "SciJava developers", email = "ctrueden@wisc.edu"}]
readme = "README.md"
keywords = ["java", "maven", "launch"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Java Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Shells",
    "Topic :: System :: System Shells",
    "Topic :: Utilities",
]

# NB: Keep this in sync with environment.yml AND dev-environment.yml!
requires-python = ">=3.8"
dependencies = [
  "psutil",
]

[project.optional-dependencies]
# NB: Keep this in sync with dev-environment.yml!
dev = [
    "autopep8",
    "build",
    "black",
    "flake8",
    "isort",
    "pre-commit",
    "pyflakes",
    "pytest",
    "pytest-cov",
    "validate-pyproject[all]",
]

[project.scripts]
jgo = "jgo:main"

[project.urls]
homepage = "https://github.com/scijava/jgo"
documentation = "https://github.com/scijava/jgo/blob/main/README.md"
source = "https://github.com/scijava/jgo"
download = "https://pypi.org/project/jgo/"
tracker = "https://github.com/scijava/jgo/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.isort]
profile = "black"
