[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jgo"
version = "2.0.0"
description = "Launch Java code from Python and the CLI, installation-free."
license = "Unlicense"
authors = [{name = "SciJava developers", email = "ctrueden@wisc.edu"}]
readme = "README.md"
keywords = ["java", "maven", "launch"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Java Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Shells",
    "Topic :: System :: System Shells",
    "Topic :: Utilities",
]

requires-python = ">=3.9"
dependencies = [
  "cjdk>=0.4.0",
  "psutil",
  "requests",
  "rich>=14.2.0",
  "rich-click>=1.9.5",
  "semver>=3.0.0",
  "tomli>=2.0.0; python_version<'3.11'",
  "tomli-w>=1.0.0",
]

[dependency-groups]
dev = [
    "build",
    "mypy",
    "pytest",
    "ruff",
    "types-Pygments",
    "types-colorama",
    "types-psutil",
    "types-requests",
    "validate-pyproject[all]",
]

[project.scripts]
jgo = "jgo.__main__:main"

[project.urls]
homepage = "https://github.com/apposed/jgo"
documentation = "https://jgo.apposed.org/"
source = "https://github.com/apposed/jgo"
download = "https://pypi.org/project/jgo/"
tracker = "https://github.com/apposed/jgo/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.ruff]
line-length = 88
src = ["src", "tests"]
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]
extend-exclude = ["bin", "build", "dist"]

[tool.ruff.lint]
extend-select = ["TC", "UP037"]
extend-ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
"__init__.py" = ["E402", "F401"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
