[metadata]
name = jgo
version = 1.0.5.dev0
author = SciJava team
author_email = ctrueden@wisc.edu
license = Unlicense
description = Launch Java code from Python and the CLI, installation-free.
long_description = file: README.md
url = https://github.com/scijava/jgo
long_description_content_type = text/markdown

[options]
packages = jgo
install_requires = psutil
python_requires = >=3.6

[options.entry_points]
console_scripts = jgo=jgo:main
